fix: prevent menu toggle overlapping

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -36,7 +36,9 @@
         font-weight: 600;
         letter-spacing: 0.15rem;
         padding: 0.7rem 1rem;
+        position: relative;
         text-transform: uppercase;
+        z-index: 2;
 
         @media screen and (max-width: breakpoints.$xl) {
             display: block;
